# cpp-ecs-demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-windows-clean.bat  build-windows.bat  build.sh
.github/workflows/: ci.yml
Design/: ## Bindless Rendering Explained.md  ## Combining Bindless Rendering with Spr.md  ## GPU-Driven Sprite Rendering with Bind.md  ## Integrating ImGui and Rive with GPU-D.md  ## Multi-Pass Sprite Rendering with Post.md
engine/: CMakeLists.txt
engine-tests/: CMakeLists.txt
engine-tests/src/: test_main.cpp
engine-tests/src/engine/: engine_test_wrapper.cpp  engine_tests.cpp  test_engine_basic.cpp
engine-tests/src/entities/: entity_test_wrappers.cpp  test_archetype_component_access.cpp  test_archetype_creation.cpp  test_basic_entity_creation.cpp  test_component_creation.cpp  test_entity_creation.cpp  test_entity_pool_overflow.cpp  test_entity_reuse.cpp  test_job_cache_refresh.cpp  test_job_create.cpp  test_job_multiple.cpp  test_job_parallel_execution.cpp  test_job_scheduler.cpp  test_pool_creation.cpp  test_system.cpp
engine/core/include/: asset_manager.h  camera.h  engine.h  input_manager.h  platform_utils.h  renderer.h  window.h
engine/core/src/: engine.cpp  glfw_window.cpp  input_manager.cpp
engine/entities/include/: component.h  entity.h  entity_manager.h  job.h  pool.h  system.h
engine/entities/include/utils/: LogLevel.h  LogMacros.h  LogSink.h  LogStream.h  logger.h  signal.h
engine/entities/src/: LoggingImpl.cpp
engine/graphics/include/: config_flags.h  gpu_sprite.h  rendering_context.h  sprite.h  sprite_manager.h  utils.h  vulkan_benchmark.h  vulkan_buffer.h  vulkan_device.h  vulkan_gui.h  vulkan_initializers.h  vulkan_rendering_context.h  vulkan_swapchain.h  vulkan_tools.h  vulkan_utils.h
engine/graphics/shaders/: triangle.slang
engine/graphics/src/: config_flags.cpp  sprite_manager.cpp  vulkan_buffer.cpp  vulkan_device.cpp  vulkan_gui.cpp  vulkan_rendering_context.cpp  vulkan_swapchain.cpp  vulkan_tools.cpp
engine/include/engine/: engine.h
engine/src/: engine.cpp
engine/tests/: test_engine_basic.cpp
engine/webgpu/: dawn_helpers.cmake  protobuf.cmake  webgpu.cmake
entities/: CMakeLists.txt
entities/include/: archetype.h  entity_manager.h  job.h  job_scheduler.h  pool.h  system.h
entities/include/utils/: LogMacros.h  LogStream.h  container_utils.h  logger.h  singleton.h  uuid.h
entities/src/: LoggingImpl.cpp  entity_debugger.cpp
entities/tests/: test_archetype_creation.cpp  test_archetype_entity_iteration.cpp  test_basic_entity_creation.cpp  test_component_creation.cpp  test_entity_pool_overflow.cpp  test_entity_reuse.cpp  test_job_cache_refresh.cpp  test_job_create.cpp  test_job_multiple.cpp  test_job_parallel_execution.cpp  test_job_scheduler.cpp  test_pool_creation.cpp  test_system.cpp
scripts/: _rename.py  build.sh  compile_shaders.py  install-hooks.sh
src/: main.cpp
src/entities/: CMakeLists.txt  archetype.h  component.h  entities.cpp  entity.h  entity_manager.h  pool.h  utils.h
src/entities/tests/: archetype_tests.cpp  component_tests.cpp  entity_manager_tests.cpp  world_tests.cpp
src/utils/: uuid.h
test_app/: CMakeLists.txt
test_app/include/debugger/: entity_debugger.h
test_app/src/: main.cpp
